Add integration and unit tests for purchase flow and inventory management
- Implement integration tests for race condition prevention in purchase flow.
- Add unit tests for cancellation policy, ensuring proper handling of purchase cancellations and inventory restoration.
- Create unit tests for inventory reservation service, validating reservation logic and error handling.
- Develop unit tests for sold-out transition logic, covering automatic and manual transitions based on inventory status.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U toogoodtogo"]
+      test: ["CMD-SHELL", "pg_isready -U toogoodtogo -d telegram_marketplace"]
       interval: 10s
       timeout: 5s
       retries: 5
