feat: add PostgreSQL repositories for Reservation and User entities
- Implemented PostgresReservationRepository for managing reservations, including methods for creating, updating, deleting, and retrieving reservations by various criteria.
- Implemented PostgresUserRepository for managing users, including methods for creating, updating, deleting, and retrieving users by ID and Telegram user ID.
- Added logging for key actions in both repositories to enhance traceability.
- Created a new UX flow document outlining the design goals and user interactions for a Telegram marketplace bot, detailing commands, keyboard usage, and payment processing.

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,29 @@
 BOT_TOKEN=telegram_token
 
 # PostgreSQL Database Connection
-DATABASE_URL=postgresql://user:password@localhost:5432/telegram_marketplace
+DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/toogoodtogo
 
 # Redis Connection
 REDIS_URL=redis://localhost:6379/0
+REDIS_LOCK_TTL_SECONDS=5
 
-# Stripe API Credentials
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+# Discovery & Geolocation
+NEARBY_RADIUS_KM=5.0
 
-# Optional: Stripe Price Mapping (JSON format)
-STRIPE_PRICE_MAPPING={}
+# Azure Blob Storage (for offer images)
+AZURE_STORAGE_CONNECTION_STRING=DefaultEndpointsProtocol=https;AccountName=your_account;AccountKey=your_key;EndpointSuffix=core.windows.net
+AZURE_STORAGE_CONTAINER_NAME=offer-images
+AZURE_STORAGE_BASE_URL=https://your_account.blob.core.windows.net
+
+# Rate Limiting
+RATE_LIMIT_MAX_REQUESTS=10
+RATE_LIMIT_WINDOW_SECONDS=60
+
+# Background Jobs
+EXPIRATION_CHECK_INTERVAL_SECONDS=60
+
+# Admin Configuration (comma-separated Telegram user IDs)
+ADMIN_TELEGRAM_IDS=123456789,987654321
 
 # Logging Configuration
 LOG_LEVEL=INFO
@@ -22,3 +35,4 @@ LOG_LEVEL=INFO
 # Application Environment
 APP_NAME=telegram-marketplace
 ENVIRONMENT=development
+
