--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pydantic-settings==2.6.1
 asyncpg==0.30.0
 alembic==1.14.0
 SQLAlchemy==2.0.36
+psycopg2-binary==2.9.11
 
 # Caching & locks
 redis==5.2.0
