updated health check loop to run on the main thread, made nginx optional, and added hide token from logs

--- a/deployment/.env.production.template
+++ b/deployment/.env.production.template
@@ -6,7 +6,9 @@
 # REQUIRED: Telegram Bot Configuration
 # =============================================================================
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-TELEGRAM_WEBHOOK_URL=https://your-domain.com/webhook
+
+# Long polling is the default. Leave webhook settings empty unless you switch to webhook mode.
+# TELEGRAM_WEBHOOK_URL=
 
 # =============================================================================
 # REQUIRED: Database Configuration
@@ -60,10 +62,8 @@ HEALTH_CHECK_TIMEOUT=120
 APP_VERSION=latest
 
 # =============================================================================
-# SSL/TLS Configuration
 # =============================================================================
-# Domain for SSL certificate
-DOMAIN=your-domain.com
-
-# Email for Let's Encrypt notifications
-SSL_EMAIL=admin@your-domain.com
+# SSL/TLS Configuration (Optional, only for webhook mode)
+# =============================================================================
+# DOMAIN=your-domain.com
+# SSL_EMAIL=admin@your-domain.com
