added admin env variable

--- a/deployment/.env.production.template
+++ b/deployment/.env.production.template
@@ -67,3 +67,8 @@ APP_VERSION=latest
 # =============================================================================
 # DOMAIN=your-domain.com
 # SSL_EMAIL=admin@your-domain.com
+
+# Comma-separated Telegram user IDs for admin access
+# To find your ID: message @userinfobot on Telegram
+# Example: ADMIN_TELEGRAM_IDS=123456789,987654321
+ADMIN_TELEGRAM_IDS=123456789
